--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ section .title::after {
   transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span {
-  color: #000;
+  color: white;
 }
 .navbar .menu li {
   list-style: none;
@@ -188,7 +188,7 @@ section .title::after {
   display: flex;
   /* background: url("https://images.wallpaperscraft.com/image/single/code_lines_programming_130775_1366x768.jpg") no-repeat center; */
   
-  background: #EDC7B7;
+  background: #111111;
   height: 100vh;
   color: #fff;
   min-height: 500px;
@@ -256,8 +256,10 @@ background-position: 0 0,10px 10px; */
 
 /* background-color: #fff;
 opacity: 0.3; */
-background-image: radial-gradient(#ca0951 0.5px, #fff 0.5px);
-background-size: 10px 10px;
+/* background-image: radial-gradient(#ca0951 0.5px, #fff 0.5px); */
+/* background-size: 10px 10px; */
+background: #181818;
+color: white;
 
 
 
@@ -313,7 +315,7 @@ background-size: 10px 10px;
 }
 .about .title::after {
   background-image: url("");  
-  color: red;
+  color: white;
 }
 
 /* services section styling */
@@ -1048,136 +1050,310 @@ footer span a:hover {
       text-align: center;
       align-items: center;
   }
-[10:23 pm, 27/09/2022] sujeet Bhai: <div class="calendar">
+  #DownloadResumeBtn {
+    width: fit-content;
+    height: fit-content;
+    background-color: transparent;
+    color: white;
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+  }
+  .techStack1{
+    font-size: 20px;
+    color: red;
+    font-weight: bold;
+  }
+  .techStack{
+    /* font-size: 20px; */
+    color:#edc7b7;
+    /* font-weight: bold; */
+  }
 
-    <!-- this is the div where your calander will apear -->
+  #calendar{
+    border: 1px solid transparent;
+    width: 80%;
+    margin: auto;
+    margin-top: 2rem;
+  }
 
-</div>
+  .card-body>i{
 
-<div class="box7" id="box7">
+    margin: 0.8rem;
+    font-size: 2rem;
 
+  }
 
+  .navbar.sticky .menu li a {
+    color: white !important;
+}
+.navbar.sticky .menu li a:hover{
+  color: red !important;
+}
+.home .home-content a {
+  background: #c21927;
+  border: none;
+}
+section .title {
+  color: rgb(194, 25, 39);
+}
+/* .about .title::after {
+  background-image: url(style.css);
+  color: red;
+} */
+section .title::after {
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  font-size: 20px;
+  color: #123C69;
+  padding: 0 5px;
+  background: none;
+  transform: translateX(-50%);
+}
+section .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: none;
+  transform: translateX(-50%);
+}
+.about .about-content .left img {
+    height: 350px;
+    width: 300px;
+    object-fit: cover;
+    border-radius: 0px
+}
+.navbar.sticky {
+  padding: 15px 0px;
+  background: #c21927;
+}
+section .title::after {
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  font-size: 20px;
+  color:white;
+  padding: 0px 5px;
+  background: none;
+  transform: translateX(-50%);
+}
+.services .serv-content .card i {
+  font-size: 50px;
+  color: #c21927;
+  transition: color 0.3s ease 0s;
+}
+.services .serv-content .card:hover i {
+  color: white;
+}
+section {
+  /* background-image: radial-gradient(rgb(202, 9, 81) 0.5px, rgb(255, 255, 255) 0.5px); */
+  background-size: 10px 10px;
+  background: rgb(24, 24, 24);
+}
+.box41>h1 {
+  padding: 5px;
+  border-radius: 12px;
+  color: white;
+  font-weight: bolder;
+}
+.skills-list div {
+  background: rgb(34, 34, 34);
+  padding: 40px;
+  font-size: 15px;
+  border-radius: 10px;
+  transition: background 0.5s ease 0s, transform 0.5s ease 0s;
+}
+.skills-list div h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+.skills-list p{
+  color: white;
+}
+.skills-list div i {
+  font-size: 50px;
+  margin-bottom: 30px;
+  color: #c21927;
+}
+.contact .contact-content .text {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: white;
+}
+.contact .contact-content .left p {
+  text-align: justify;
+  color: white;
+}
+.contact .contact-content .info a, .contact .contact-content .info a:hover, .contact .contact-content .info a:link {
+  text-decoration: none;
+  color:white;
+}
+.contact .contact-content .info .sub-title {
+  color: white;
+}
 
+.right form .button-area button {
+    color: rgb(255, 255, 255);
+    display: block;
+    height: 45px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    flex-wrap: nowrap;
+    background: #c21927;
+    border: none;
+    transition: all 0.3s ease 0s;
+    width: 160px !important;
+}
+.contact .contact-content .row i {
+  font-size: 25px;
+  color: #c21927;
+}
+.material-symbols-outlined {
+  background-color: transparent;
+  color: #c21927;
+}
+/* .contact .right form .field input, .contact .right form .textarea textarea {
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+  outline: none;
+  padding: 0px 15px;
+  font-size: 17px;
+  font-family: Poppins, sans-serif;
+  transition: all 0.3s ease 0s;
+  background-color: transparent;
+} */
+.owl-dot.active, .owl-dot:hover {
+  background: #c21927 !important;
+}
+.owl-dot {
+  height: 13px;
+  width: 13px;
+  margin: 0px 5px;
+  border-radius: 50%;
+  transition: all 0.3s ease 0s;
+  outline: none !important;
+  border: 2px solid #c21927 !important;
+}
+.navbar .menu li a:hover {
+  color: #c21927;
+}
+.navbar .logo a span {
+  color: #c21927;
+  transition: all 0.3s ease;
+}
+.navbar.sticky .menu li a:hover {
+  color: black !important;
+}
+.navbar.sticky .logo a span {
+  color:black;
+}
+.home .home-content .text-3 span {
+  color: #c21927;
+  font-weight: 500;
+}
+section {
+  background-image: radial-gradient(rgb(202, 9, 81) 0.5px, rgb(24, 24, 24) 0.5px);
+  background-size: 10px 10px;
+}
+.home{
+  background-image: url(/mynk2906.github.io/images/black-back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+}
+.about .about-content .left {
+  width: calc(33% - 20px);
+  background: rgb(34, 34, 34);
+  text-align: center;
+  border-radius: 6px;
+  padding: 50px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  border: 1px solid;
+}
+.home .home-content a:hover {
+  color: #c21927;
+  background: none;
+  border: 1px solid #c21927;
+}
+/* .about .about-content .left {
+  width: calc(33% - 20px);
+  background: rgb(34, 34, 34);
+  text-align: center;
+  border-radius: 6px;
+  padding: 50px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  border: 1px solid;
+} */
+.about .about-content .left img {
+  height: 350px;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.skills-list div:hover {
+  background: #c21927;
+  color: #E0E0E0;
+  transform: translateY(-10px);
+}
+.skills-list div i {
+  font-size: 50px;
+  margin-bottom: 30px;
+  color: white;
+}
+#calendar {
+  border: 1px solid transparent;
+  width: 80%;
+  margin: auto;
+  margin-top: 2rem;
+  background: black;
+  padding: 30px;
+}
+.contrib-number {
+  font-weight: 300;
+  line-height: 1.3em;
+  font-size: 24px;
+  display: block;
+  color: white !important;
+}
+.card p {
+  font-size: 12px;
+}
+body {
+  background: black;
+}
+.scroll-up-btn {
+  position: fixed;
+  height: 45px;
+  width: 42px;
+  background: white;
+  right: 30px;
+  bottom: 10px;
+  text-align: center;
+  line-height: 45px;
+  color: #c21927;
+  z-index: 9999;
+  font-size: 30px;
+  border-radius: 6px;
+  border-bottom-width: 2px;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
 
-    <div>
-  <div class="pieContainer">
-    <div class="pieBackground">
-    </div>
-    <div id="pieSlice99_1" class="hold">
-      <div class="danny Col1">
-      </div>
-    </div>
-    <div id="pieSlice99_2" class="hold">
-      <div class="danny Col1">
-      </div>
-    </div>
-    <div class="stat-circle-cover">  
-        <span class="stat-number">
-          1200+
-        </span>
-    </div>
-  </div>
-  Hours <br>
-  of full stack coading
-</div>
-
-
-
-  <div>
-  <div class="pieContainer">
-    <div class="pieBackground">
-    </div>
-    <div id="pieSlice99_1" class="hold">
-      <div class="danny Col2">
-      </div>
-    </div>
-    <div id="pieSlice99_2" class="hold">
-      <div class="danny Col2">
-      </div>
-    </div>
-    <div class="stat-circle-cover">  
-        <span class="stat-number">
-          240+
-        </span>
-    </div>
-  </div>
-  Hackerrank <br>
-  problems
-</div>
-
-
-
-<div>
-  <div class="pieContainer">
-    <div class="pieBackground">
-    </div>
-    <div id="pieSlice99_1" class="hold">
-      <div class="danny Col3">
-      </div>
-    </div>
-    <div id="pieSlice99_2" class="hold">
-      <div class="danny Col3">
-      </div>
-    </div>
-    <div class="stat-circle-cover">  
-        <span class="stat-number">
-          210+
-        </span>
-    </div>
-  </div>
-  Git <br>
-  commits
-</div>
-
-
-
-<div>
-  <div class="pieContainer">
-    <div class="pieBackground">
-    </div>
-    <div id="pieSlice99_1" class="hold">
-      <div class="danny Col4">
-      </div>
-    </div>
-    <div id="pieSlice99_2" class="hold">
-      <div class="danny Col4">
-      </div>
-    </div>
-    <div class="stat-circle-cover">  
-        <span class="stat-number">
-          20+
-        </span>
-    </div>
-  </div>
-  Projects <br>
-  DOne
-</div>
-
-
-
-<div>
-  <div class="pieContainer">
-    <div class="pieBackground">
-    </div>
-    <div id="pieSlice99_1" class="hold">
-      <div class="danny Col5">
-      </div>
-    </div>
-    <div id="pieSlice99_2" class="hold">
-      <div class="danny Col5">
-      </div>
-    </div>
-    <div class="stat-circle-cover">  
-        <span class="stat-number">
-          100+
-        </span>
-    </div>
-  </div>
-    Hours <br>
-    of soft skills    
-</div>
-
-
-
-
-</div>
