--- a/style.css
+++ b/style.css
@@ -1290,16 +1290,7 @@ section {
   background: none;
   border: 1px solid #c21927;
 }
-/* .about .about-content .left {
-  width: calc(33% - 20px);
-  background: rgb(34, 34, 34);
-  text-align: center;
-  border-radius: 6px;
-  padding: 50px 25px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-  border: 1px solid;
-} */
+
 .about .about-content .left img {
   height: 350px;
   width: 300px;
@@ -1357,3 +1348,13 @@ body {
   transition: all 0.3s ease;
 }
 
+.about .about-content .left {
+  /* width: calc(33% - 20px);
+  background: rgb(34, 34, 34);
+  text-align: center;
+  border-radius: 6px;
+  padding: 50px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s; */
+  border: none;
+}
