--- a/style.css
+++ b/style.css
@@ -1160,8 +1160,8 @@ section {
 .box41>h1 {
   padding: 5px;
   border-radius: 12px;
-  color: white;
-  font-weight: bolder;
+  color: red;
+  font-weight: 500;
 }
 .skills-list div {
   background: rgb(34, 34, 34);
@@ -1348,13 +1348,122 @@ body {
   transition: all 0.3s ease;
 }
 
+.about .title::after {
+  background-image: url(style.css);
+  color: red;
+  background: #181818;
+}
+
+
+
 .about .about-content .left {
-  /* width: calc(33% - 20px);
-  background: rgb(34, 34, 34);
-  text-align: center;
-  border-radius: 6px;
-  padding: 50px 25px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s; */
   border: none;
+}
+
+
+.tools {
+  /* height: 540px; */
+  display: grid;
+  /* grid-template-columns: repeat(auto); */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.tool {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tool img {
+  width: 63px;
+  height: 63px;
+}
+
+section .title {
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  font-family: "Ubuntu", sans-serif;
+}
+
+section .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: white;
+  transform: translateX(-50%);
+}
+
+section .title::after {
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  font-size: 20px;
+  color: #da4348;
+  padding: 0 5px;
+  background: radial-gradient(rgb(202, 9, 81) 0.5px, rgb(24, 24, 24) 0.5px);
+  transform: translateX(-50%);
+}
+
+.teams .title::before {
+  background: #fff;
+}
+
+.teams .title::after {
+  background: #111;
+  margin-top: 10px;
+  content: "what i have built";
+}
+
+.tool-img-s img{
+  /* border: 2px solid green; */
+  width: 88%;
+  height: 70%;
+}
+
+.tool-img-s:nth-child(6) img{
+  /* border: 2px solid green; */
+  width: 68%;
+  height: 60%;
+}
+.tool-img-s:nth-child(7) img{
+  /* border: 2px solid green; */
+  width: 68%;
+  height: 49%;
+}
+@media only screen and (max-width: 465px){
+  
+  .tool-img-s img{
+    /* border: 2px solid green; */
+    width: 88%;
+    height: 70%;
+  }
+  .tool-img-s-java{
+    width: 70%;
+    height: 60%;
+  }
+  
+  .tool-img-s:nth-child(6) img{
+    /* border: 2px solid green; */
+    width: 75%;
+    height: 60%;
+  }
+  .tool-img-s:nth-child(7) img{
+    /* border: 2px solid green; */
+    width: 75%;
+    height: 60%;
+  }
+  .tool-img-s{
+    margin: 0;
+    padding: 0;
+  }
+
 }
