git stats and video added

--- a/style.css
+++ b/style.css
@@ -1479,5 +1479,93 @@ section .title::after {
 
 
 
+/* github steak */
+      .header {
+        font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
+        fill: #ffb000;
+        animation: fadeInAnimation 0.8s ease-in-out forwards;
+      }
+      @supports(-moz-appearance: auto) {
+        /* Selector detects Firefox */
+        .header { font-size: 15.5px; }
+      }
+      
+.stat {
+  font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #ffffff;
+}
+@supports(-moz-appearance: auto) {
+  /* Selector detects Firefox */
+  .stat { font-size:12px; }
+}
+.stagger {
+  opacity: 0;
+  animation: fadeInAnimation 0.3s ease-in-out forwards;
+}
+.rank-text {
+  font: 800 24px 'Segoe UI', Ubuntu, Sans-Serif; fill: #ffffff;
+  animation: scaleInAnimation 0.3s ease-in-out forwards;
+}
+
+.not_bold { font-weight: 400 }
+.bold { font-weight: 700 }
+.icon {
+  fill: #785ef0;
+  display: block;
+}
+
+.rank-circle-rim {
+  stroke: #ffb000;
+  fill: none;
+  stroke-width: 6;
+  opacity: 0.2;
+}
+.rank-circle {
+  stroke: #ffb000;
+  stroke-dasharray: 250;
+  fill: none;
+  stroke-width: 6;
+  stroke-linecap: round;
+  opacity: 0.8;
+  transform-origin: -10px 8px;
+  transform: rotate(-90deg);
+  animation: rankAnimation 1s forwards ease-in-out;
+}
+
+@keyframes rankAnimation {
+  from {
+    stroke-dashoffset: 251.32741228718345;
+  }
+  to {
+    stroke-dashoffset: 126.64529613317701;
+  }
+}
 
 
+
+      
+/* Animations */
+@keyframes scaleInAnimation {
+  from {
+    transform: translate(-5px, 5px) scale(0);
+  }
+  to {
+    transform: translate(-5px, 5px) scale(1);
+  }
+}
+@keyframes fadeInAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+      
+
+#github-steak11{
+  /* border: 3px solid firebrick; */
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+}
+ /* github steak */                 
